style.css
* {
	font-family: 'Roboto', sans-serif;
}

ul {
	list-style-type: none;
}

/* Navbar */
.nav-link {
	font-size: 15px;
}

/* Scrollspy */
#about, #portfolio, #contact {
	position: relative;
	margin-top: 150px;
	padding-top: 80px;
}

/* About Me*/
#intro {
	color: #007BFF;
	font-weight: bold;
	font-size: 30px;
}

.about-me-fig {
	font-weight: bold;
}

#bio, .about-me-fig {
	color: #707070;
}

#tech-header, #apps-header {
	color: #007BFF;
	font-weight: bold;
}

#bio {
	margin-bottom: 200px;
}

.tech-stack {
	color: #707070;
	font-weight: bold;
}

/* Portfolio */
#app-descr {
	color: #707070;
}

#spacing {
	margin-bottom: 250px;
}

/* Contact */
.contact-header h3 {
	font-weight: bold;
}

#contact {
	background: #434343;
}

.contact-header, footer {
	color: white;
}

#contact .slide-up {
	margin-top: 50px;
	padding-bottom: 250px;
}

#contact h3 {
	margin-bottom: 30px;
}

/* Images */
#headshot {
	height: 70px;
	width: 70px;
}

#communication, #teamwork, #curious {
	height: 90px;
	width: 90px;
}

#linkedin-icon, #github-icon {
	height: 50px;
	width: 50px;
}

#portfolio-img {
	height: 100%;
	width: 100%;
}

